<resources>
    <string name="app_name">FYP</string>
    <string name="title_activity_map">Map</string>
    <string name="set_english">English</string>
    <string name="set_german">German</string>
    <string name="back">Back</string>
    <string name="car_parks">Car Parks</string>
    <string name="spaces">Spaces</string>
    <string name="main_menu">Main Menu</string>
    <string name="map">Map</string>
    <string name="traffic_estimations">Traffic Estimations</string>
    <string name="view_reservation">View Reservation</string>
    <string name="options">Options</string>
    <string name="language">Language</string>
    <string name="reservations">Your Reservation</string>
    <string name="you_do_not_currently_have_any_reservations">You do not currently have any reservations</string>
    <string name="delay">Delay</string>
    <string name="recommend_car_park">Recommend Car Park</string>
    <string name="enter_destination">Enter destination</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="free_spaces">Free spaces</string>
    <string name="total_spaces">Total spaces</string>
    <string name="reserve_a_space">Reserve a space</string>
    <string name="cancel">Cancel</string>
    <string name="reserve">Reserve</string>
    <string name="enter_licence_plate_number">Enter licence plate number</string>
    <string name="licence_plate">Licence plate:</string>
    <string name="valid_until">Valid until:</string>
    <string name="booked_at">Booked at:</string>
    <string name="refresh_activity_information">Refresh activity information</string>
    <string name="res_succ">Reservation successful</string>
    <string name="enter_lice_pl">Please enter licence plate number</string>
    <string name="closed">Closed</string>
    <string name="full">Full</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="title_activity_login">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">Sign up</string>
    <string name="unavailable">Unavailable</string>
    <string name="vehicle_height">Vehicle Height</string>
    <string name="price">Price</string>
    <string name="times">Times</string>
    <string name="last_updated">Last Updated</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="login">Login</string>
    <string name="clears_email_field">Clears email field</string>
    <string name="clears_input_text">Clears input text</string>
    <string name="go_to_options">Go to options</string>
    <string name="go_to_login">Go to login</string>
    <string name="please_log_in_to_reserve_a_space">Please log in to reserve a space</string>
    <string name="north">North</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="south">South</string>
    <string name="x">X</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_car_park">Select Car Park</string>
    <string name="direction">Direction</string>
</resources>
