<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_gap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_gap"
        tools:targetApi="o">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/default_gap"
            android:text="@string/options"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap"
            android:text="@string/language"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_gap"
            tools:targetApi="o">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/set_english"
                android:onClick="setEnglish"
                android:padding="@dimen/default_gap"
                app:srcCompat="@drawable/en"
                tools:targetApi="o" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/set_german"
                android:onClick="setDeutsch"
                android:padding="@dimen/default_gap"
                app:srcCompat="@drawable/deu"
                tools:targetApi="o" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="backToMenu"
        android:padding="@dimen/default_gap"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:targetApi="o" />
</RelativeLayout>