<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_gap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_gap">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap"
            android:text="@string/traffic_estimations"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/default_gap"
            tools:targetApi="o">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goToNorth"
                android:padding="@dimen/default_gap"
                android:text="@string/north"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/default_gap">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="goToWest"
                    android:padding="@dimen/default_gap"
                    android:text="@string/west"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="goToEast"
                    android:padding="@dimen/default_gap"
                    android:text="@string/east"
                    android:textSize="30sp" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="goToSouth"
                android:padding="@dimen/default_gap"
                android:text="@string/south"
                android:textSize="30sp" />

            <Button
                android:id="@+id/estimateDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/default_gap"
                android:text="@string/estimate_direction"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="backToMenu"
        android:padding="@dimen/default_gap"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:targetApi="o" />
</RelativeLayout>