<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_gap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_gap"
        tools:targetApi="o">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/go_to_options"
            android:onClick="goToOptions"
            android:padding="@dimen/default_gap"
            app:srcCompat="@drawable/options"
            tools:targetApi="o" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:padding="@dimen/default_gap"
            android:text="@string/main_menu"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/go_to_login"
            android:onClick="goToLogin"
            android:padding="@dimen/default_gap"
            app:srcCompat="@drawable/login"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/default_gap"
        tools:targetApi="o">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:onClick="goToMaps"
                android:padding="@dimen/default_gap"
                android:text="@string/map"
                android:textAllCaps="true"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="84dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:onClick="goToCarParksList"
                android:padding="@dimen/default_gap"
                android:text="@string/car_parks"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:onClick="goToTrafficEstimations"
                android:padding="@dimen/default_gap"
                android:text="@string/traffic_estimations"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:onClick="goToReservation"
                android:padding="@dimen/default_gap"
                android:text="@string/view_reservation"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:onClick="goToRecommendPark"
                android:padding="@dimen/default_gap"
                android:text="@string/recommend_car_park"
                android:textAllCaps="true"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>