<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_gap"
        android:paddingVertical="@dimen/default_gap">

        <TextView
            android:id="@+id/viewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_gap"
            android:paddingVertical="@dimen/default_gap"
            android:text="@string/reserve_a_space"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/carParkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_gap"
            android:paddingVertical="@dimen/default_gap"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/default_gap"
            android:paddingVertical="@dimen/default_gap">

            <EditText
                android:id="@+id/enterLicencePlate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_licence_plate_number"
                android:inputType="textPersonName"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/clearText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/clears_input_text"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reserveSpace"
            android:paddingHorizontal="@dimen/default_gap"
            android:paddingVertical="@dimen/default_gap"
            android:text="@string/reserve" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="cancelReservation"
        android:paddingHorizontal="@dimen/default_gap"
        android:paddingVertical="@dimen/default_gap"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold" />
</RelativeLayout>