<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_gap"
        android:paddingVertical="@dimen/default_gap"
        tools:targetApi="o">

        <TextView
            android:id="@+id/viewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/default_gap"
            android:paddingVertical="@dimen/default_gap"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/default_gap"
            android:paddingVertical="@dimen/default_gap"
            tools:targetApi="o">

            <Button
                android:id="@+id/reserveBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="goToReserveSpace"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:text="@string/reserve_a_space"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="24sp"
                tools:targetApi="o" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/refresh_activity_information"
                android:onClick="refresh"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                app:srcCompat="@drawable/refresh"
                tools:targetApi="o" />

        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:columnCount="2"
            android:paddingHorizontal="@dimen/default_gap"
            android:paddingVertical="@dimen/default_gap"
            android:rowCount="9"
            tools:targetApi="o">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:text="@string/free_spaces"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/viewFreeSpaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:text="@string/total_spaces"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/viewTotalSpaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:text="@string/vehicle_height"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/vwVehicleHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:text="@string/price"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/vwPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:text="@string/times"
                android:textSize="20sp"
                tools:targetApi="o" />

            <Button
                android:id="@+id/viewTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:textAllCaps="false"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:text="@string/last_updated"
                android:textSize="20sp"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/viewwLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingVertical="@dimen/default_gap"
                android:textSize="20sp"
                tools:targetApi="o" />

        </GridLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="backToCarParks"
        android:paddingHorizontal="@dimen/default_gap"
        android:paddingVertical="@dimen/default_gap"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:targetApi="o" />
</RelativeLayout>

    <!--</RelativeLayout>-->