<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_gap">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/default_gap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_gap"
        tools:targetApi="o">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap"
            android:text="@string/reservations"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/resParkName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_gap"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:targetApi="o" />

        <GridLayout
            android:id="@+id/reserveGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:padding="@dimen/default_gap"
            android:rowCount="9"
            android:visibility="invisible"
            tools:targetApi="o">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_gap"
                android:text="@string/booked_at"
                android:textSize="20sp"
                android:visibility="visible"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txtvw0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_gap"
                android:textSize="20sp"
                android:visibility="visible"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_gap"
                android:text="@string/valid_until"
                android:textSize="20sp"
                android:visibility="visible"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txtvw1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_gap"
                android:textSize="20sp"
                android:visibility="visible"
                tools:targetApi="o" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_gap"
                android:text="@string/licence_plate"
                android:textSize="20sp"
                android:visibility="visible"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/txtvw2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_gap"
                android:textSize="20sp"
                android:visibility="visible"
                tools:targetApi="o" />

        </GridLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="backToMenu"
        android:padding="@dimen/default_gap"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:targetApi="o" />

</RelativeLayout>